examples/assignment2/type-error/10.j
/* Test the following:
 *  - type error when global method call has unmatched arg/parameter type
 **/

class Another_Main {
    Void main(Void void_fml, String sTR) {
        Surface sur;
        println(null);
        sur.replace(void_fml);
    }

}

class Surface {
    Bool needToTransform;
    Void transform() {
        Surface s;
        Int i;
        Void v;
        s = contain(v);

        while (((((!needToTransform))))) {
            return;
        }
    }

    Surface contain(Void nothing) {
        return this;
    }

    Void replace(Surface another) {
        return;
    }
}
